--- a/jogo/index.html
+++ b/jogo/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+
+  <title>Jogo da Memória</title>
+
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Jogo</h1>
+  <script src="./scripts.js"></script>
+
+  <h1>Hello</h1>
+  <section class="memory-game">
+  <div class="memory-card">
+    <img class="front-face" src="img/102.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/102.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/400.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/400.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/404.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/404.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/408.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/408.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/420.jpg" Face da Carta="Backbone">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/420.jpg" Face da Carta="Backbone">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/502.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+
+  <div class="memory-card">
+    <img class="front-face" src="img/502.jpg" alt="Face da Carta">
+    <img class="back-face" src="img/2.png" alt="Verso da Carta">
+  </div>
+</section>
+
 </body>
 </html>
-
-
