--- a/jogo/index.html
+++ b/jogo/index.html
@@ -5,73 +5,65 @@
 
   <title>Jogo da Memória</title>
 
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script src="./scripts.js"></script>
-
-  <h1>Hello</h1>
   <section class="memory-game">
-  <div class="memory-card">
-    <img class="front-face" src="img/102.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
+    <div class="memory-card" data-framework="aurelia">
+        <img class="front-face" src="img/102.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
+    <div class="memory-card" data-framework="aurelia">
+        <img class="front-face" src="img/102.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
 
-  <div class="memory-card">
-    <img class="front-face" src="img/102.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
+    <div class="memory-card" data-framework="vue">
+        <img class="front-face" src="img/400.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
+    <div class="memory-card" data-framework="vue">
+        <img class="front-face" src="img/400.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
 
-  <div class="memory-card">
-    <img class="front-face" src="img/400.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
+    <div class="memory-card" data-framework="angular">
+        <img class="front-face" src="img/404.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
+    <div class="memory-card" data-framework="angular">
+        <img class="front-face" src="img/404.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
 
-  <div class="memory-card">
-    <img class="front-face" src="img/400.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
+    <div class="memory-card" data-framework="ember">
+        <img class="front-face" src="img/408.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
+    <div class="memory-card" data-framework="ember">
+        <img class="front-face" src="img/408.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
 
-  <div class="memory-card">
-    <img class="front-face" src="img/404.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
+    <div class="memory-card" data-framework="backbone">
+        <img class="front-face" src="img/420.jpg" Face da Carta="Backbone">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
+    <div class="memory-card" data-framework="backbone">
+        <img class="front-face" src="img/420.jpg" Face da Carta="Backbone">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
 
-  <div class="memory-card">
-    <img class="front-face" src="img/404.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
+    <div class="memory-card" data-framework="react">
+        <img class="front-face" src="img/502.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
+    <div class="memory-card" data-framework="react">
+        <img class="front-face" src="img/502.jpg" alt="Face da Carta">
+        <img class="back-face" src="img/2.png" alt="Verso da Carta">
+    </div>
+  </section>
 
-  <div class="memory-card">
-    <img class="front-face" src="img/408.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
-
-  <div class="memory-card">
-    <img class="front-face" src="img/408.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
-
-  <div class="memory-card">
-    <img class="front-face" src="img/420.jpg" Face da Carta="Backbone">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
-
-  <div class="memory-card">
-    <img class="front-face" src="img/420.jpg" Face da Carta="Backbone">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
-
-  <div class="memory-card">
-    <img class="front-face" src="img/502.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
-
-  <div class="memory-card">
-    <img class="front-face" src="img/502.jpg" alt="Face da Carta">
-    <img class="back-face" src="img/2.png" alt="Verso da Carta">
-  </div>
-</section>
-
+  <script src="scripts.js"></script>
 </body>
 </html>
