--- a/jogo/game.html
+++ b/jogo/game.html
@@ -8,23 +8,35 @@
   <link rel="stylesheet" href="css/game.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<body>
+<body onload="start()">
 
   
     <header>
         <h1>Jogo da Memória</h1>
         <h2>Encontre os pares</h2>
+        <h3><div>
+            <span id="hour">00</span>:<span id="minute">00</span>:<span id="second">00</span>:<span id="millisecond">000</span>
+          </div> </h3>
 
         <nav>
             <ul>
-                <li><a href="index.html">Início</a></li>
+                <li> </li>
                 <li><a href="game.html">Jogar</a></li>
                 <li><a href="ranking.html">Ranking</a></li>
             </ul>
 
         </nav>
+        
 
-        <input type="button" value="Iniciar" id="iniciar" onclick="iniciarJogo()">
+        <input type="button" value="start" id="start" onclick="start()">
+        <input type="button" value="Reiniciar" id="reset" onClick="window.location.reload()">
+        <input type="button" value="Pausar" id="parar" onclick="pausarJogo()">
+        <a href="index.html"><input type="button" value="Sair do Jogo" id="sair" onclick="sairJogo()"></a>
+
+        
+
+
+
 
     </header>
 
@@ -105,6 +117,7 @@
 
 
     <script src="scripts.js"></script>
+    <script src="tempo.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
